Working on third area of website

--- a/style.css
+++ b/style.css
@@ -199,3 +199,22 @@ h1, h2, h3, h4, h5, h6{
     margin-left: 69vw;
     font-size: 1.2vw;
 }
+
+
+/*Third Area*/
+
+.third-area .third-header {
+    display: block;
+    position: absolute;
+    margin-left: 43vw;
+    margin-top: 1vw;
+    font-size: 2.2vw;
+}
+
+.clients-header {
+    display: block;
+    position: absolute;
+    margin-left: 12vw;
+    margin-top: 38vw;
+    font-size: 2.2vw;
+}
