--- a/style.css
+++ b/style.css
@@ -221,12 +221,35 @@ h1, h2, h3, h4, h5, h6{
 
 /* FOOTER */
 
-footer {
+.footer {
     background-color: #565656;
     color: white;
+    height: 25vw;
 }
 
 .footer .footer-logo {
-    width: 100%;
-    height: 100%;
+    margin-left: 10vw;
+    margin-top: 5vw;
+    width: 10%;
+    height: 10%;
 }
+
+.footer .footer-links {
+    margin-left: 60vw;
+    color: white;
+    
+}
+
+.footer .footer-links ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
+    font-size: 1vw;
+    margin-top: 1.3em;
+}
+
+.footer .footer-links ul li a{
+    color: #ffffff;
+    text-decoration: none;
+}    
