--- a/style.css
+++ b/style.css
@@ -219,6 +219,33 @@ h1, h2, h3, h4, h5, h6{
     font-size: 2.2vw;
 }
 
+/* Area 4 */
+
+.area4 {
+
+}
+
+.area4 h2 {
+    position: absolute;
+    margin-left: 65vw;
+    margin-top: 3vw;
+}
+
+.area4 .register {
+    position: absolute;
+    margin-left:57.8vw;
+    margin-top: 9vw;
+    border-radius: 10px;
+}
+.area4 .register input[type="text"]{
+    border-radius: 20px;
+    font-size: 1.4vw;
+    width: 27vw;
+    height: 2vw;
+    margin-top: 1vw;
+    color: rgb(129, 129, 129);
+}
+
 /* FOOTER */
 
 .footer {
@@ -230,17 +257,18 @@ h1, h2, h3, h4, h5, h6{
 .footer .footer-logo {
     margin-left: 10vw;
     margin-top: 5vw;
-    width: 10%;
-    height: 10%;
+    width: 15%;
+    height: 15%;
 }
 
-.footer .footer-links {
-    margin-left: 60vw;
+.footer .footer-links1 {
+    margin-left: 45vw;
+    margin-top: -10vw;
     color: white;
     
 }
 
-.footer .footer-links ul{
+.footer .footer-links1 ul{
     margin: 0;
     padding: 0;
     list-style: none;
@@ -249,7 +277,28 @@ h1, h2, h3, h4, h5, h6{
     margin-top: 1.3em;
 }
 
-.footer .footer-links ul li a{
+.footer .footer-links1 ul li a{
+    color: #ffffff;
+    text-decoration: none;
+}    
+
+.footer .footer-links2 {
+    margin-left: 65vw;
+    margin-top: -7.5vw;
+    color: white;
+    
+}
+
+.footer .footer-links2 ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
+    font-size: 1vw;
+    margin-top: 1.3em;
+}
+
+.footer .footer-links2 ul li a{
     color: #ffffff;
     text-decoration: none;
 }    
