--- a/style.css
+++ b/style.css
@@ -204,11 +204,62 @@ h1, h2, h3, h4, h5, h6{
 
 .first-area .playbutton {
     position: absolute;
-    margin-top: 5vw;
+    margin-top: 11vw;
     margin-left: 65vw;
+    box-shadow: 0px 4px 40px 30px rgba(0, 0, 0, 0.555), 0 6px 20px 0 rgba(0, 0, 0, 0.555);
+    -moz-box-shadow: 0px 4px 40px 30px rgba(0, 0, 0, 0.555), 0 6px 20px 0 rgba(0, 0, 0, 0.555);
+    -webkit-box-shadow: 0px 4px 40px 30px rgba(0, 0, 0, 0.555), 0 6px 20px 0 rgba(0, 0, 0, 0.555);
+    -o-box-shadow: 0px 4px 40px 30px rgba(0, 0, 0, 0.555), 0 6px 20px 0 rgba(0, 0, 0, 0.555);
+    border-radius:300px;
+}
+.first-area .playbutton:hover {
+    
+    box-shadow: 0px 4px 40px 30px rgba(125, 226, 204, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.555);
+    -moz-box-shadow: 0px 4px 40px 30px rgba(125, 226, 204, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.555);
+    -webkit-box-shadow: 0px 4px 40px 30px rgba(125, 226, 204, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.555);
+    -o-box-shadow: 0px 4px 40px 30px rgba(125, 226, 204, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.555);
+    border-radius:300px;
 }
 
 /*Second Area*/
+
+.second-area .button1 {
+    position: absolute;
+    margin-left: 16vw;
+    margin-top: 28vw;
+    font-family: 'Mulish', sans-serif;
+    background: #6c6c6c;
+    color: aliceblue;
+    padding:  10px;
+    border: 0;
+    border-radius: 10px;
+    width: 15vw;
+    height: 47px;
+    font-size: 110%;
+}
+.second-area .button1:hover {
+    background: #3d3d3d;
+    color: aliceblue;
+}
+.second-area .button2 {
+    position: absolute;
+    margin-left: 79vw;
+    margin-top: 74vw;
+    font-family: 'Mulish', sans-serif;
+    background: #6c6c6c;
+    color: aliceblue;
+    padding:  10px;
+    border: 0;
+    border-radius: 10px;
+    width: 15vw;
+    height: 47px;
+    font-size: 110%;
+}
+.second-area .button2:hover {
+    background: #3d3d3d;
+    color: aliceblue;
+}
+
 .second-area .second-header {
     display: block;
     position: absolute;
@@ -246,7 +297,70 @@ h1, h2, h3, h4, h5, h6{
     font-size: 1.2vw;
 }
 
+/*discover*/
 
+.second-area .discover ul{
+    text-align: left;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    position: absolute;
+    font-size: 1vw;
+    margin-top: 1.3em;
+    color: white;
+}
+.second-area .discover ul h1{
+    padding-left: 30px;
+    padding-top: 10px;
+}
+.second-area .discover ul hr{
+    margin-top: -1vw;
+    width: 95%;
+}
+div.discover1 {
+    margin-top: 4vw;
+    margin-left: 60vw;
+    background: rgba(0, 141, 151, 0.856);
+    width: 510px;
+    height: 74px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
+}
+
+div.discover1:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 74, 80, 0.856), 0 6px 20px 0 rgba(0, 141, 151, 0.856);
+
+}
+
+div.discover2 {
+    margin-top: 1vw;
+    margin-left: 60vw;
+    background: rgba(0, 141, 151, 0.856);
+    width: 510px;
+    height: 166px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
+}
+
+div.discover2:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 74, 80, 0.856), 0 6px 20px 0 rgba(0, 141, 151, 0.856);
+
+}
+
+div.discover3 {
+    margin-top: vw;
+    margin-left: 60vw;
+    background: rgba(0, 141, 151, 0.856);
+    width: 510px;
+    height: 80px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
+}
+
+div.discover3:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 141, 151, 0.856), 0 6px 20px 0 rgba(0, 141, 151, 0.856);
+
+}
 /*Third Area*/
 
 .third-area .third-header {
