--- a/style2.css
+++ b/style2.css
@@ -77,157 +77,99 @@ h1, h2, h3, h4, h5, h6{
     padding: 14px 16px;
     text-decoration: none;
   }
-  .navbar a .resize{
+  .navbar .resize{
     float: left;
+    width: 100px;
+    padding: 20px;
   }
-
+  .dropbtn {
+    font-family: 'Mulish', sans-serif;
+    background: #4b9aab;
+    color: aliceblue;
+    padding:  5px;
+    border: 0;
+    border-radius: 100px;
+    width: 70px;
+    height: 47px;
+    font-size: 90%;
+    margin-top: 2em;
+    
+}
+  
+  
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: #32626d;
+  }
   
   .dropdown {
     float: right;
-    overflow: hidden;
-  }
-  
-  .dropdown .dropbtn {
-    font-size: 16px;  
-    border: none;
-    outline: none;
-    color: #266280;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-  }
-  
-  .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: gray;
+    position: relative;
+    display: inline-block;
   }
   
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #f1f1f1;
     min-width: 160px;
+    overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
   
   .dropdown-content a {
-    float: none;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-    text-align: left;
   }
   
-  .dropdown-content a:hover {
-    background-color: #ddd;
-  }
+  .dropdown a:hover {background-color: #ddd;}
   
-  .dropdown:hover .dropdown-content {
+  .show {display: block;}
+
+  .navbar .buttons{
+      
+    float: right;
     display: block;
+    margin-right: 0.7em;
+    margin-top: 2em;
   }
-
-
 
 
 
 
 
     /*Header Area*/
+
     
-    .resize{
-        width:"1%";
-        height:"1%";
-    }
-    .top-header-area{
-        background-color: RGBA(255,255,255,0.65);
-        padding: 21px 0;
-        overflow: hidden;
-        position: absolute;
-    
-    }
-    .top-header-area .inner-header{
-        overflow: hidden;
-    }
-    .top-header-area .logo{
-        float: left;
-        width: 100%;
-    }
-    .top-header-area .logo ul{
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        text-align: left;
-    
-    }
-    .top-header-area .logo ul li{
-        display: inline-block;
-        margin-left: 1.3em;
-    
-        
-    }
-    .top-header-area .header-links{
-        float: right;
-        width: 75%;
-    }
-    .top-header-area .header-links ul{
-        margin: 0;
-        padding: 0;
-        list-style: none;
-    
-        font-size: 2vw;
-        margin-top: -3.5em;
-    }
-    .top-header-area .header-links ul li{
-        display: inline-block;
-        margin-left: 2em;
-        text-align: center;
-        
-    }
-    .top-header-area .header-links ul li a{
-        color: #266280;
-        text-decoration: none;
-    }
-    .top-header-area .header-links ul li a:hover{
-        color: #071a24
-    }
-    .top-header-area .header-links ul li a:link {
-        color: aliceblue;
-    }
-    .top-header-area .header-links .buttons{
-        display: block;
-        margin-left: 40em;
-        margin-top: -2em;
-    
-    }
-    .top-header-area .buttons .login_btn {
+    .navbar .buttons .login_btn {
         font-family: 'Mulish', sans-serif;
         background: #4b9aab;
         color: aliceblue;
-        padding:  10px;
+        padding:  5px;
         border: 0;
-        border-radius: 10px;
-        width: 138px;
+        border-radius: 100px;
+        width: 70px;
         height: 47px;
-        font-size: 110%;
+        font-size: 90%;
     }
-    .top-header-area .buttons .login_btn:hover {
+    .navbar .buttons .login_btn:hover {
         background: #32626d;
         color: aliceblue;
     }
-    .top-header-area .buttons .signup_btn {
+    .navbar .buttons .signup_btn {
         font-family: 'Mulish', sans-serif;
         background: #6c6c6c;
         color: aliceblue;
-        padding:  10px;
+        padding:  5px;
         border: 0;
-        border-radius: 10px;
-        width: 138px;
+        border-radius: 100px;
+        width: 70px;
         height: 47px;
-        font-size: 110%;
+        font-size: 90%;
     }
-    .top-header-area .buttons .signup_btn:hover {
+    .navbar .buttons .signup_btn:hover {
         background: #3d3d3d;
         color: aliceblue;
     }
