--- a/style2.css
+++ b/style2.css
@@ -64,95 +64,91 @@ h1, h2, h3, h4, h5, h6{
 /*New Navbar*/
 
 
+
 .navbar {
     overflow: hidden;
     background-color: RGBA(255,255,255,0.65);
   }
   
+  .navbar .resize{
+      float: left;
+      width: 90px;
+      padding: 10px;
+    }
+  
   .navbar a {
-    float: left;
+    float: right;
     font-size: 16px;
     color: #266280;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
   }
-  .navbar .resize{
-    float: left;
-    width: 100px;
-    padding: 20px;
-  }
-  .dropbtn {
-    font-family: 'Mulish', sans-serif;
-    background: #4b9aab;
-    color: aliceblue;
-    padding:  5px;
-    border: 0;
-    border-radius: 100px;
-    width: 70px;
-    height: 47px;
-    font-size: 90%;
-    margin-top: 2em;
-    
-}
-  
-  
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #32626d;
-  }
   
   .dropdown {
     float: right;
-    position: relative;
-    display: inline-block;
+    overflow: hidden;
+  }
+
+  
+  .dropdown .dropbtn {
+    font-family: 'Mulish', sans-serif;
+    background: #4b9aab;
+    color: aliceblue;
+    padding:  0px;
+    border: 0;
+    width: 75px;
+    height: 75px;
+    font-size: 100%;
+    margin-left: 0;
+  }
+  
+  .navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
+    background: #32626d;
+    color: aliceblue;
   }
   
   .dropdown-content {
+    right:0;
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: #f9f9f9;
     min-width: 160px;
-    overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
   
   .dropdown-content a {
+    float: none;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    text-align: left;
   }
   
-  .dropdown a:hover {background-color: #ddd;}
+  .dropdown-content a:hover {
+    background-color: gray;
+  }
   
-  .show {display: block;}
-
-  .navbar .buttons{
-      
-    float: right;
+  .show {
     display: block;
-    margin-right: 0.7em;
-    margin-top: 2em;
   }
 
+  .navbar .buttons {
+      float: right;
 
+  }
 
-
-
-    /*Header Area*/
-
-    
     .navbar .buttons .login_btn {
         font-family: 'Mulish', sans-serif;
         background: #4b9aab;
         color: aliceblue;
-        padding:  5px;
+        padding:  0px;
         border: 0;
-        border-radius: 100px;
-        width: 70px;
-        height: 47px;
-        font-size: 90%;
+        width: 80px;
+        height: 75px;
+        font-size: 100%;
     }
     .navbar .buttons .login_btn:hover {
         background: #32626d;
@@ -162,12 +158,12 @@ h1, h2, h3, h4, h5, h6{
         font-family: 'Mulish', sans-serif;
         background: #6c6c6c;
         color: aliceblue;
-        padding:  5px;
+        padding:  0px;
         border: 0;
-        border-radius: 100px;
-        width: 70px;
-        height: 47px;
-        font-size: 90%;
+        width: 80px;
+        height: 75px;
+        font-size: 100%;
+        margin-left: -3px;
     }
     .navbar .buttons .signup_btn:hover {
         background: #3d3d3d;
