--- a/style.css
+++ b/style.css
@@ -205,18 +205,12 @@ h1, h2, h3, h4, h5, h6{
         position: absolute;
         margin-top: 11vw;
         margin-left: 65vw;
-        box-shadow: 0px 4px 40px 30px rgba(0, 0, 0, 0.555), 0 6px 20px 0 rgba(0, 0, 0, 0.555);
-        -moz-box-shadow: 0px 4px 40px 30px rgba(0, 0, 0, 0.555), 0 6px 20px 0 rgba(0, 0, 0, 0.555);
-        -webkit-box-shadow: 0px 4px 40px 30px rgba(0, 0, 0, 0.555), 0 6px 20px 0 rgba(0, 0, 0, 0.555);
-        -o-box-shadow: 0px 4px 40px 30px rgba(0, 0, 0, 0.555), 0 6px 20px 0 rgba(0, 0, 0, 0.555);
+        box-shadow: 0px 4px 40px 30px rgba(0, 0, 0, 0.555), 0px 6px 20px 0 rgba(0, 0, 0, 0.555);
         border-radius:300px;
     }
     .first-area .playbutton:hover {
         
         box-shadow: 0px 4px 40px 30px rgba(125, 226, 204, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.555);
-        -moz-box-shadow: 0px 4px 40px 30px rgba(125, 226, 204, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.555);
-        -webkit-box-shadow: 0px 4px 40px 30px rgba(125, 226, 204, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.555);
-        -o-box-shadow: 0px 4px 40px 30px rgba(125, 226, 204, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.555);
         border-radius:300px;
     }
     
