--- a/style2.css
+++ b/style2.css
@@ -1,3 +1,8 @@
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body{
     font-family: 'Mulish', sans-serif;
     color: #333;
@@ -5,6 +10,7 @@ body{
     margin: 0;
     padding: 0;
     overflow: auto;
+    position: relative;
     
 }
 /* width */
