--- a/style.css
+++ b/style.css
@@ -759,16 +759,22 @@ div.container4 {
     text-decoration: none;
 }    
 
+.footer .icons{
+    margin-left: 50em;
+    margin-top: 1em;
+}
+
+
 /* Icons */
 
 .fa {
     padding: 20px;
-    font-size: 30px;
-    width: 30px;
+    font-size: 10px;
+    width: 10px;
     text-align: center;
     text-decoration: none;
     margin: 5px 2px;
-    border-radius: 50%;
+    border-radius: 100%;
   }
 
 .fa:hover {
