--- a/style2.css
+++ b/style2.css
@@ -393,30 +393,32 @@ h1, h2, h3, h4, h5, h6{
     .third-area .third-header {
         display: block;
         position: absolute;
-        margin-left: 43vw;
-        margin-top: 1vw;
-        font-size: 2.2vw;
+        margin-left: 30vw;
+        margin-top: 0vw;
+        font-size: 200%;
     }
     
     .clients-header {
         display: block;
         position: absolute;
-        margin-left: 12vw;
-        margin-top: 38vw;
-        font-size: 2.2vw;
+        margin-left: 6.5vw;
+        margin-top: 90vw;
+        font-size: 200%;
     }
     
     .third-area .clients-button input[type="submit"]{
         position: absolute;
         border-radius: 0;
-        font-size: 1vw;
-        width: 13vw;
-        height: 3.5vw;
-        margin-top: -8.8vw;
-        margin-left: 58.3vw;
+        font-size: 50%;
+        width: 30vw;
+        height: 10vw;
+        margin-top: -22.8vw;
+        margin-left:30vw;
         background-color: #236a7a;
         color: white;
         border:none;
+        
+        border-radius: 30px;
         box-shadow: 0px 0px 1vw -3px #236a7a;
     }
     .third-area .clients-button input[type="submit"]:hover{
@@ -443,8 +445,8 @@ h1, h2, h3, h4, h5, h6{
     }
     
     div.tools1 {
-        margin-top: 12vw;
-        margin-left: 10vw;
+        margin-top: 25vw;
+        margin-left: 20vw;
         position: absolute;
         width: 250px;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
