--- a/style2.css
+++ b/style2.css
@@ -179,9 +179,9 @@ h1, h2, h3, h4, h5, h6{
     /*Banner Area*/
     
     .first-area .bgimage {
-        width: 140%; 
+        width: 100%; 
         height: 90%;
-        margin-left: -130px;
+        margin-left: -0px;
         
     }
     .first-area .bannerbgimage{
@@ -192,21 +192,21 @@ h1, h2, h3, h4, h5, h6{
         display: block;
         position: absolute;
         margin-left: 10vw;
-        margin-top: 5vw;
-        font-size: 25px;
+        margin-top: 1.7vw;
+        font-size: 23px;
     
     }
     .first-area .banner-text {
         display: block;
         position: absolute;
         margin-left: 10vw;
-        margin-top: 67vw;
-        font-size: 15px;
+        margin-top: 63vw;
+        font-size: 14px;
     }
     .first-area .getstarted {
         position: absolute;
         margin-left: 10vw;
-        margin-top: 97vw;
+        margin-top: 92vw;
         font-family: 'Mulish', sans-serif;
         background: #6c6c6c;
         color: aliceblue;
@@ -255,6 +255,13 @@ h1, h2, h3, h4, h5, h6{
     padding-left: 30px;
 }
 
+    
+.second-area .second-header h1{
+    font-size: 150%;
+    margin-right: 14vw;
+    margin-top: -2vw;
+}
+
 .second-area .bgimage2 {
     margin-top: 10vw;
 }
@@ -263,7 +270,7 @@ h1, h2, h3, h4, h5, h6{
     .second-area .button1 {
         position: absolute;
         margin-left: 36vw;
-        margin-top: 67vw;
+        margin-top: 63vw;
         font-family: 'Mulish', sans-serif;
         background: #6c6c6c;
         color: aliceblue;
@@ -586,7 +593,7 @@ h1, h2, h3, h4, h5, h6{
     
     .area4 .seller {
         position: absolute;
-        margin-top: 57vw;
+        margin-top: 95vw;
         margin-left: 7vw;
         font-size: 4em
     }
@@ -597,17 +604,30 @@ h1, h2, h3, h4, h5, h6{
         margin-top: 3vw;
     }
     
+  
+    .area4 .bgimage .mob_4{
+        margin-top: -30vw;
+        
+    }
+
+    .area4 .reg {
+        margin-top:-17vw;
+        margin-left: 32vw;
+        font-size: 400%;
+        color: white;
+    }
+
     .area4 .register {
         position: absolute;
-        margin-left:57.8vw;
-        margin-top: 9vw;
+        margin-left:15.8vw;
+        margin-top: 0vw;
         border-radius: 10px;
     }
     .area4 .register input[type="text"]{
         border-radius: 30px;
-        font-size: 1.4vw;
-        width: 27vw;
-        height: 3vw;
+        font-size: 150%;
+        width: 60vw;
+        height: 9vw;
         margin-top: 1vw;
         color: rgb(129, 129, 129);
         border: none;
@@ -617,13 +637,14 @@ h1, h2, h3, h4, h5, h6{
     
     .area4 .register input[type="submit"]{
         border-radius: 0;
-        font-size: 1vw;
-        width: 10vw;
-        height: 3.5vw;
-        margin-top: 1vw;
-        margin-left: 9vw;
-        background-color: #236a7a;
-        color: white;
+        font-size: 130%;
+        width: 30vw;
+        height: 7vw;
+        margin-top: 5vw;
+        margin-left: 20vw;
+        background-color: rgb(159, 214, 216);
+        color: #236a7a;
+        border-radius: 20px;
         border:none;
         box-shadow: 0px 0px 1vw -3px #236a7a;
     }
@@ -639,7 +660,7 @@ h1, h2, h3, h4, h5, h6{
         border-radius: 0;
         font-size: 1vw;
         width: 20vw;
-        height: 3.5vw;
+        height: vw;
         margin-top: 57.5vw;
         margin-left: 70vw;
         background-color: #236a7a;
@@ -665,10 +686,10 @@ h1, h2, h3, h4, h5, h6{
     }
     
     div.polaroid1 {
-        margin-top: 64vw;
+        margin-top: 140vw;
         margin-left: 10vw;
         position: absolute;
-        width: 250px;
+        width: 200px;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         text-align: center;
     }
@@ -681,7 +702,7 @@ h1, h2, h3, h4, h5, h6{
     div.container1 {
         padding: 10px;
     }
-    
+    /*
     div.polaroid2 {
         margin-top: 64vw;
         margin-left: 30vw;
@@ -731,18 +752,21 @@ h1, h2, h3, h4, h5, h6{
         padding: 10px;
     }
     
+    */
+
     /* FOOTER */
     
     .footer {
+        margin-top: 120vw;
         background-color: #565656;
         color: white;
-        height: 25vw;
+        height: 50vw;
     }
     
     .footer .footer-logo {
         margin-left: 10vw;
-        margin-top: 5vw;
-        width: 15%;
+        margin-top: 10vw;
+        width: 40%;
         height: 15%;
     }
     
