--- a/style2.css
+++ b/style2.css
@@ -805,8 +805,8 @@ h1, h2, h3, h4, h5, h6{
         padding: 0;
         list-style: none;
     
-        font-size: 1vw;
-        margin-top: 1.3em;
+        font-size: 100%;
+        margin-top: -8em;
     }
     
     .footer .footer-links2 ul li a{
@@ -814,11 +814,16 @@ h1, h2, h3, h4, h5, h6{
         text-decoration: none;
     }    
 
+    .footer .icons{
+        margin-left: 43px;
+        margin-top: 30px;
+    }
+
 
 /* Icons */
 
 .fa {
-    padding: 20px;
+    padding: 10px;
     font-size: 10px;
     width: 10px;
     text-align: center;
